--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -4,9 +4,23 @@
     <%= link_to "Back", admin_users_path, class: "text-primary hover:underline" %>
   </div>
 
+  <% if flash[:alert] %>
+    <div class="bg-red-50 dark:bg-red-900/20 border border-red-200 dark:border-red-800 rounded-lg p-3 text-sm text-red-700 dark:text-red-300">
+      <%= flash[:alert] %>
+    </div>
+  <% end %>
+
   <% if flash[:notice] %>
     <div class="bg-green-50 dark:bg-green-900/20 border border-green-200 dark:border-green-800 rounded-lg p-3 text-sm text-green-700 dark:text-green-300">
       <%= flash[:notice] %>
+    </div>
+  <% end %>
+
+  <% if flash[:temp_password] %>
+    <div class="bg-yellow-50 dark:bg-yellow-900/20 border border-yellow-200 dark:border-yellow-800 rounded-lg p-4 text-sm">
+      <p class="font-semibold text-yellow-800 dark:text-yellow-300">Temporary password (shown only once):</p>
+      <code class="block mt-1 font-mono text-lg text-yellow-900 dark:text-yellow-100 select-all"><%= flash[:temp_password] %></code>
+      <p class="mt-2 text-yellow-600 dark:text-yellow-400">Copy this password now. It will not be shown again.</p>
     </div>
   <% end %>
 
